Update model resource parameter.

--- a/02-passage_gen_pipeline.ipynb
+++ b/02-passage_gen_pipeline.ipynb
@@ -658,8 +658,7 @@
     "    PROJECT_ID: str,\n",
     "    REGION: str,\n",
     "    BUCKET_URI: str,\n",
-    "    # MODEL_RESOURCE: str = \"publishers/google/models/text-bison-32k@002\",\n",
-    "    MODEL_RESOURCE: str = \"publishers/google/models/gemini-1.0-pro-001\",\n",
+    "    MODEL_RESOURCE: str = \"publishers/google/models/text-bison-32k@002\",\n",
     "    context_column: str = \"name\",\n",
     "    question_column: str = \"prompt\",\n",
     "    response_column: str = \"response\",\n",
